--- a/conf/local/clients.conf
+++ b/conf/local/clients.conf
@@ -13,7 +13,8 @@ path_to_public_keys=public
 
 console=true
 exit_tunnel=false
-web_server_url=http://127.0.0.1:8080
+web_server = true
+web_server_url="http://127.0.0.1:8080"
 entry_tunnel_url = "tcp://127.0.0.1:8081"
 log="clients.log"
 multithreading=true
